tests/invalid/repr_wrong_arg_count/main.py
def run_case() -> None:
    out: str = repr(1, 2)


if __name__ == "__main__":
    run_case()
